sandbox/output
GildedRoseTest.java:70: error: illegal start of expression
                return item -> item.sellIn <= 0,
                ^
GildedRoseTest.java:70: error: ';' expected
                return item -> item.sellIn <= 0,
                      ^
GildedRoseTest.java:70: error: illegal start of expression
                return item -> item.sellIn <= 0,
                            ^
GildedRoseTest.java:70: error: ';' expected
                return item -> item.sellIn <= 0,
                                   ^
GildedRoseTest.java:70: error: not a statement
                return item -> item.sellIn <= 0,
                                           ^
GildedRoseTest.java:70: error: ';' expected
                return item -> item.sellIn <= 0,
                                               ^
GildedRoseTest.java:71: error: ';' expected
                GildedRose.generateUpdatedNormalItem());
                                                      ^
GildedRoseTest.java:139: error: illegal start of expression
                return item -> item.sellIn <= 0,
                ^
GildedRoseTest.java:139: error: ';' expected
                return item -> item.sellIn <= 0,
                      ^
GildedRoseTest.java:139: error: illegal start of expression
                return item -> item.sellIn <= 0,
                            ^
GildedRoseTest.java:139: error: ';' expected
                return item -> item.sellIn <= 0,
                                   ^
GildedRoseTest.java:139: error: not a statement
                return item -> item.sellIn <= 0,
                                           ^
GildedRoseTest.java:139: error: ';' expected
                return item -> item.sellIn <= 0,
                                               ^
GildedRoseTest.java:140: error: ';' expected
                GildedRose.generateUpdatedAgedBrie());
                                                    ^
GildedRoseTest.java:209: error: illegal start of expression
                return item -> item.sellIn <= 0,
                ^
GildedRoseTest.java:209: error: ';' expected
                return item -> item.sellIn <= 0,
                      ^
GildedRoseTest.java:209: error: illegal start of expression
                return item -> item.sellIn <= 0,
                            ^
GildedRoseTest.java:209: error: ';' expected
                return item -> item.sellIn <= 0,
                                   ^
GildedRoseTest.java:209: error: not a statement
                return item -> item.sellIn <= 0,
                                           ^
GildedRoseTest.java:209: error: ';' expected
                return item -> item.sellIn <= 0,
                                               ^
GildedRoseTest.java:210: error: ';' expected
                GildedRose.generateUpdatedSulfuras());
                                                    ^
GildedRoseTest.java:247: error: illegal start of expression
                return item -> item.sellIn <= 0,
                ^
GildedRoseTest.java:247: error: ';' expected
                return item -> item.sellIn <= 0,
                      ^
GildedRoseTest.java:247: error: illegal start of expression
                return item -> item.sellIn <= 0,
                            ^
GildedRoseTest.java:247: error: ';' expected
                return item -> item.sellIn <= 0,
                                   ^
GildedRoseTest.java:247: error: not a statement
                return item -> item.sellIn <= 0,
                                           ^
GildedRoseTest.java:247: error: ';' expected
                return item -> item.sellIn <= 0,
                                               ^
GildedRoseTest.java:248: error: ';' expected
                GildedRose.generateUpdatedBackstagePasses());
                                                           ^
GildedRoseTest.java:437: error: illegal start of expression
                return item -> item.sellIn <= 0,
                ^
GildedRoseTest.java:437: error: ';' expected
                return item -> item.sellIn <= 0,
                      ^
GildedRoseTest.java:437: error: illegal start of expression
                return item -> item.sellIn <= 0,
                            ^
GildedRoseTest.java:437: error: ';' expected
                return item -> item.sellIn <= 0,
                                   ^
GildedRoseTest.java:437: error: not a statement
                return item -> item.sellIn <= 0,
                                           ^
GildedRoseTest.java:437: error: ';' expected
                return item -> item.sellIn <= 0,
                                               ^
GildedRoseTest.java:438: error: ';' expected
                GildedRose.generateUpdatedConjured());
                                                    ^
35 errors
